@@ -4883,6 +4883,284 @@ PyTypeObject MToFType = {
 };
 
 /************/
+/* FToM */
+/************/
+typedef struct {
+    pyo_audio_HEAD
+    PyObject *input;
+    Stream *input_stream;
+    MYFLT lastfreq;
+    MYFLT curmidi;
+    int modebuffer[2]; // need at least 2 slots for mul & add
+} FToM;
+
+static void
+FToM_process(FToM *self) {
+    int i;
+    MYFLT freq;
+    MYFLT *in = Stream_getData((Stream *)self->input_stream);
+    
+    for (i=0; i<self->bufsize; i++) {
+        freq = in[i];
+        if (freq != self->lastfreq) {
+            if (freq < 8.1758)
+                freq = 8.1578;
+            self->curmidi = 12.0 * MYLOG2(freq / 440.0) + 69;
+            self->lastfreq = freq;
+        }
+        else
+            self->data[i] = self->curmidi;
+    }
+}
+
+static void FToM_postprocessing_ii(FToM *self) { POST_PROCESSING_II };
+static void FToM_postprocessing_ai(FToM *self) { POST_PROCESSING_AI };
+static void FToM_postprocessing_ia(FToM *self) { POST_PROCESSING_IA };
+static void FToM_postprocessing_aa(FToM *self) { POST_PROCESSING_AA };
+static void FToM_postprocessing_ireva(FToM *self) { POST_PROCESSING_IREVA };
+static void FToM_postprocessing_areva(FToM *self) { POST_PROCESSING_AREVA };
+static void FToM_postprocessing_revai(FToM *self) { POST_PROCESSING_REVAI };
+static void FToM_postprocessing_revaa(FToM *self) { POST_PROCESSING_REVAA };
+static void FToM_postprocessing_revareva(FToM *self) { POST_PROCESSING_REVAREVA };
+
+static void
+FToM_setProcMode(FToM *self)
+{
+    int muladdmode;
+    muladdmode = self->modebuffer[0] + self->modebuffer[1] * 10;
+    
+    self->proc_func_ptr = FToM_process;
+    
+	switch (muladdmode) {
+        case 0:        
+            self->muladd_func_ptr = FToM_postprocessing_ii;
+            break;
+        case 1:    
+            self->muladd_func_ptr = FToM_postprocessing_ai;
+            break;
+        case 2:    
+            self->muladd_func_ptr = FToM_postprocessing_revai;
+            break;
+        case 10:        
+            self->muladd_func_ptr = FToM_postprocessing_ia;
+            break;
+        case 11:    
+            self->muladd_func_ptr = FToM_postprocessing_aa;
+            break;
+        case 12:    
+            self->muladd_func_ptr = FToM_postprocessing_revaa;
+            break;
+        case 20:        
+            self->muladd_func_ptr = FToM_postprocessing_ireva;
+            break;
+        case 21:    
+            self->muladd_func_ptr = FToM_postprocessing_areva;
+            break;
+        case 22:    
+            self->muladd_func_ptr = FToM_postprocessing_revareva;
+            break;
+    }   
+}
+
+static void
+FToM_compute_next_data_frame(FToM *self)
+{
+    (*self->proc_func_ptr)(self); 
+    (*self->muladd_func_ptr)(self);
+}
+
+static int
+FToM_traverse(FToM *self, visitproc visit, void *arg)
+{
+    pyo_VISIT
+    Py_VISIT(self->input);
+    Py_VISIT(self->input_stream);
+    return 0;
+}
+
+static int 
+FToM_clear(FToM *self)
+{
+    pyo_CLEAR
+    Py_CLEAR(self->input);
+    Py_CLEAR(self->input_stream);
+    return 0;
+}
+
+static void
+FToM_dealloc(FToM* self)
+{
+    pyo_DEALLOC
+    FToM_clear(self);
+    self->ob_type->tp_free((PyObject*)self);
+}
+
+static PyObject *
+FToM_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
+{
+    int i;
+    PyObject *inputtmp, *input_streamtmp, *multmp=NULL, *addtmp=NULL;
+    FToM *self;
+    self = (FToM *)type->tp_alloc(type, 0);
+    
+    self->lastfreq = 8.1758;
+    self->curmidi = 0.0;
+	self->modebuffer[0] = 0;
+	self->modebuffer[1] = 0;
+    
+    INIT_OBJECT_COMMON
+    Stream_setFunctionPtr(self->stream, FToM_compute_next_data_frame);
+    self->mode_func_ptr = FToM_setProcMode;
+
+    static char *kwlist[] = {"input", "mul", "add", NULL};
+    
+    if (! PyArg_ParseTupleAndKeywords(args, kwds, "O|OO", kwlist, &inputtmp, &multmp, &addtmp))
+        Py_RETURN_NONE;
+    
+    INIT_INPUT_STREAM
+    
+    if (multmp) {
+        PyObject_CallMethod((PyObject *)self, "setMul", "O", multmp);
+    }
+    
+    if (addtmp) {
+        PyObject_CallMethod((PyObject *)self, "setAdd", "O", addtmp);
+    }
+    
+    PyObject_CallMethod(self->server, "addStream", "O", self->stream);
+    
+    (*self->mode_func_ptr)(self);
+
+    return (PyObject *)self;
+}
+
+static PyObject * FToM_getServer(FToM* self) { GET_SERVER };
+static PyObject * FToM_getStream(FToM* self) { GET_STREAM };
+static PyObject * FToM_setMul(FToM *self, PyObject *arg) { SET_MUL };	
+static PyObject * FToM_setAdd(FToM *self, PyObject *arg) { SET_ADD };	
+static PyObject * FToM_setSub(FToM *self, PyObject *arg) { SET_SUB };	
+static PyObject * FToM_setDiv(FToM *self, PyObject *arg) { SET_DIV };	
+
+static PyObject * FToM_play(FToM *self, PyObject *args, PyObject *kwds) { PLAY };
+static PyObject * FToM_out(FToM *self, PyObject *args, PyObject *kwds) { OUT };
+static PyObject * FToM_stop(FToM *self) { STOP };
+
+static PyObject * FToM_multiply(FToM *self, PyObject *arg) { MULTIPLY };
+static PyObject * FToM_inplace_multiply(FToM *self, PyObject *arg) { INPLACE_MULTIPLY };
+static PyObject * FToM_add(FToM *self, PyObject *arg) { ADD };
+static PyObject * FToM_inplace_add(FToM *self, PyObject *arg) { INPLACE_ADD };
+static PyObject * FToM_sub(FToM *self, PyObject *arg) { SUB };
+static PyObject * FToM_inplace_sub(FToM *self, PyObject *arg) { INPLACE_SUB };
+static PyObject * FToM_div(FToM *self, PyObject *arg) { DIV };
+static PyObject * FToM_inplace_div(FToM *self, PyObject *arg) { INPLACE_DIV };
+
+static PyMemberDef FToM_members[] = {
+    {"server", T_OBJECT_EX, offsetof(FToM, server), 0, "Pyo server."},
+    {"stream", T_OBJECT_EX, offsetof(FToM, stream), 0, "Stream object."},
+    {"input", T_OBJECT_EX, offsetof(FToM, input), 0, "Input sound object."},
+    {"mul", T_OBJECT_EX, offsetof(FToM, mul), 0, "Mul factor."},
+    {"add", T_OBJECT_EX, offsetof(FToM, add), 0, "Add factor."},
+    {NULL}  /* Sentinel */
+};
+
+static PyMethodDef FToM_methods[] = {
+    {"getServer", (PyCFunction)FToM_getServer, METH_NOARGS, "Returns server object."},
+    {"_getStream", (PyCFunction)FToM_getStream, METH_NOARGS, "Returns stream object."},
+    {"play", (PyCFunction)FToM_play, METH_VARARGS|METH_KEYWORDS, "Starts computing without sending sound to soundcard."},
+    {"stop", (PyCFunction)FToM_stop, METH_NOARGS, "Stops computing."},
+    {"out", (PyCFunction)FToM_out, METH_VARARGS|METH_KEYWORDS, "Starts computing and sends sound to soundcard channel speficied by argument."},
+    {"setMul", (PyCFunction)FToM_setMul, METH_O, "Sets oscillator mul factor."},
+    {"setAdd", (PyCFunction)FToM_setAdd, METH_O, "Sets oscillator add factor."},
+    {"setSub", (PyCFunction)FToM_setSub, METH_O, "Sets inverse add factor."},
+    {"setDiv", (PyCFunction)FToM_setDiv, METH_O, "Sets inverse mul factor."},
+    {NULL}  /* Sentinel */
+};
+
+static PyNumberMethods FToM_as_number = {
+    (binaryfunc)FToM_add,                         /*nb_add*/
+    (binaryfunc)FToM_sub,                         /*nb_subtract*/
+    (binaryfunc)FToM_multiply,                    /*nb_multiply*/
+    (binaryfunc)FToM_div,                                              /*nb_divide*/
+    0,                                              /*nb_remainder*/
+    0,                                              /*nb_divmod*/
+    0,                                              /*nb_power*/
+    0,                                              /*nb_neg*/
+    0,                                              /*nb_pos*/
+    0,                                              /*(unaryfunc)array_abs,*/
+    0,                                              /*nb_nonzero*/
+    0,                                              /*nb_invert*/
+    0,                                              /*nb_lshift*/
+    0,                                              /*nb_rshift*/
+    0,                                              /*nb_and*/
+    0,                                              /*nb_xor*/
+    0,                                              /*nb_or*/
+    0,                                              /*nb_coerce*/
+    0,                                              /*nb_int*/
+    0,                                              /*nb_long*/
+    0,                                              /*nb_float*/
+    0,                                              /*nb_oct*/
+    0,                                              /*nb_hex*/
+    (binaryfunc)FToM_inplace_add,                 /*inplace_add*/
+    (binaryfunc)FToM_inplace_sub,                 /*inplace_subtract*/
+    (binaryfunc)FToM_inplace_multiply,            /*inplace_multiply*/
+    (binaryfunc)FToM_inplace_div,                                              /*inplace_divide*/
+    0,                                              /*inplace_remainder*/
+    0,                                              /*inplace_power*/
+    0,                                              /*inplace_lshift*/
+    0,                                              /*inplace_rshift*/
+    0,                                              /*inplace_and*/
+    0,                                              /*inplace_xor*/
+    0,                                              /*inplace_or*/
+    0,                                              /*nb_floor_divide*/
+    0,                                              /*nb_true_divide*/
+    0,                                              /*nb_inplace_floor_divide*/
+    0,                                              /*nb_inplace_true_divide*/
+    0,                                              /* nb_index */
+};
+
+PyTypeObject FToMType = {
+    PyObject_HEAD_INIT(NULL)
+    0,                                              /*ob_size*/
+    "_pyo.FToM_base",                                   /*tp_name*/
+    sizeof(FToM),                                 /*tp_basicsize*/
+    0,                                              /*tp_itemsize*/
+    (destructor)FToM_dealloc,                     /*tp_dealloc*/
+    0,                                              /*tp_print*/
+    0,                                              /*tp_getattr*/
+    0,                                              /*tp_setattr*/
+    0,                                              /*tp_compare*/
+    0,                                              /*tp_repr*/
+    &FToM_as_number,                              /*tp_as_number*/
+    0,                                              /*tp_as_sequence*/
+    0,                                              /*tp_as_mapping*/
+    0,                                              /*tp_hash */
+    0,                                              /*tp_call*/
+    0,                                              /*tp_str*/
+    0,                                              /*tp_getattro*/
+    0,                                              /*tp_setattro*/
+    0,                                              /*tp_as_buffer*/
+    Py_TPFLAGS_DEFAULT | Py_TPFLAGS_BASETYPE | Py_TPFLAGS_HAVE_GC | Py_TPFLAGS_CHECKTYPES, /*tp_flags*/
+    "FToM objects. Converts frequency to midi note.",           /* tp_doc */
+    (traverseproc)FToM_traverse,                  /* tp_traverse */
+    (inquiry)FToM_clear,                          /* tp_clear */
+    0,                                              /* tp_richcompare */
+    0,                                              /* tp_weaklistoffset */
+    0,                                              /* tp_iter */
+    0,                                              /* tp_iternext */
+    FToM_methods,                                 /* tp_methods */
+    FToM_members,                                 /* tp_members */
+    0,                                              /* tp_getset */
+    0,                                              /* tp_base */
+    0,                                              /* tp_dict */
+    0,                                              /* tp_descr_get */
+    0,                                              /* tp_descr_set */
+    0,                                              /* tp_dictoffset */
+    0,                          /* tp_init */
+    0,                                              /* tp_alloc */
+    FToM_new,                                     /* tp_new */
+};
+
+/************/
 /* MToT */
 /************/
 typedef struct {
