@@ -1,3 +1,8 @@
+2014-10-24 belangeo <belangeo@gmail.com>
+
+    * Added new object: FToM, converts an audio stream containning frequencies in hertz to a midi note audio stream.
+    - rev 1259
+
 2014-10-23 belangeo <belangeo@gmail.com>
 
     * Added new function: hzToMidi, converts a frequency in hertz to a midi note value.
